<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">"ALLY"</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_home_gui">home_gui</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_registrieren">Registrieren</string>
    <string name="passwordVerify">Passwort erneut eingeben</string>
    <string name="mail">E-Mail</string>
    <string name="anrede">Anrede</string>
    <string name="title">Titel</string>
    <string name="telefonNr">Telefonnummer</string>
    <string name="next">Weiter</string>
    <string name="back">Zurück</string>
    <string name="agb">Ich habe die Datenschutzbestimmungen gelesen und akzeptiere die AGBs.</string>
    <string name="praxisname">Praxisname</string>
    <string name="praxismail">Adresszusatz</string>
    <string name="praxisfon">Praxistel.</string>
    <string name="praxisadress">Straße + Hausnr.</string>
    <string name="city">Stadt</string>
    <string name="plz">PLZ</string>
    <string-array name="titleNames">
        <item>-Titel-</item>
        <item>Dr.</item>
        <item>Dr. med.</item>
        <item>Prof. Dr. med.</item>
        <item>Prof. Dr.</item>
    </string-array>
    <string-array name="kontaktArray">
        <item>-</item>
        <item>Deutsche Zentrale</item>
        <item>Kundenservice</item>
        <item>Medizinischer Kundenservice</item>
        <item>Buchhaltung</item>
    </string-array>
    <string-array name="anredeEntries">
        <item>-Anrede-</item>
        <item>Herr</item>
        <item>Frau</item>
    </string-array>
    <string name="register">Registrieren</string>
    <string name="login">Anmelden</string>
    <string name="password">Passwort</string>
    <string name="vorname">Vorname</string>
    <string name="nachname">Nachname</string>
    <string name="et_username_beschr">E-Mail</string>
    <string name="tv_passwortVergessen_beschr">Haben Sie Ihr Passwort vergessen?</string>
    <string name="sw_angemeldetBleiben_beschr">angemeldet bleiben</string>
    <string name="netzwerk">Netzwerk</string>
    <string name="account">Account</string>
    <string name="impressum">Impressum</string>
    <string name="abmelden">Abmelden</string>
    <string name="incorrectData">Sie haben falsche Daten eingegeben</string>
    <string name="ok">OK</string>
    <string name="faq">Messenger</string>
    <string name="kontakt">Kontakt</string>
    <string name="nebenwirkungen">Nebenwirkungen melden</string>
    <string name="kongresse">Kongressinformationen</string>
    <string name="fachinfos">Fachinfos</string>
    <string name="einstellungen">Einstellungen</string>
    <string name="firstMessage">Hallo, hier finden Sie häufig gestellte Fragen. Falls Ihnen das nicht weiterhilft, finden Sie hier ebenfalls den Punkt -individuelle Frage stellen- wo Sie per SMS, Anruf oder E-Mal eine Antwort innerhalb der nächsten 24h von uns erwarten können.</string>
    <string name="radioArzt">Arzt</string>
    <string name="radioApotheker">Apotheker</string>
    <string name="individuelleFrageText">Hier können Sie Ihre Frage eingeben.</string>
    <string name="frageButton">Fragen</string>
    <string-array name="apothekerFragen">
        <item>-- Bitte wählen Sie eine Frage --</item>
        <item>Wie kann ich als Apotheke bei ALK bestellen?</item>
        <item>Fallen bei einer Bestellung Transportkosten an?</item>
        <item>Was ist der Unterschied zwischen ALK-depot SQ® AF, F1 und F2?</item>
        <item>Warum brauchen Sie den Inhabernamen der Apotheke?</item>
        <item>Ist mein Fax angekommen?</item>
        <item>Wann wird die bestellte Ware geliefert?</item>
        <item>Individuelle Frage stellen</item>
    </string-array>
    <string-array name="arztKategorien">
        <item>-- Bitte wählen Sie eine Kategorie --</item>
        <item>Fragen zu Produkten</item>
        <item>Sonstige Fragen</item>
        <item>Individuelle Frage stellen</item>
    </string-array>
    <string-array name="arztFragenProdukte">
        <item>-- Bitte wählen Sie eine Frage --</item>
        <item>Warum sind Verdünnungen der ALK-lyophilisiert SQ®- und Reless®-Präparate nur 24 Stunden haltbar?</item>
        <item>Wie wirksam und verträglich sind die verschiedenen ALK-Insektengiftpräparate?</item>
        <item>Gibt es eine Verdünnungsanleitung für ALK-lyophilisiert SQ® Therapie Insektengiftpräparate?</item>
        <item>Welche Erfahrungen gibt es mit GRAZAX® beim Einsatz von Kindern und Jugendlichen?</item>
        <item>In welchen Studien wurde der nachhaltige Therapieerfolg von GRAZAX® belegt?</item>
    </string-array>
    <string-array name="arztFragenSonstiges">
        <item>-- Bitte wählen Sie eine Frage --</item>
        <item>Was ist der Unterschied einer Allergie-Immuntherapie mit Allergoiden vs. nativen Allergenen?</item>
        <item>Für welche Präparate von ALK gilt die Indikation Asthmaprävention und gibt es einen Schutz vor Neusensibilisierungen?</item>
        <item>Wie wird ein Pricktest durchgeführt und das Ergebnis bewertet?</item>
        <item>Welche allergologische Relevanz hat Ragweed (Ambrosia)?</item>
        <item>Wie vertragen sich Allergie-Immuntherapie und Betablocker?</item>
    </string-array>
    <string-array name="kontaktierAuswahl">
        <item>-- Bitte wählen Sie eine Kontaktmöglichkeit aus --</item>
        <item>E-Mail</item>
        <item>SMS</item>
        <item>Per Anruf</item>
    </string-array>
    <string name="nwText">Pharmaunternehmen haben laut Arzneimittelgesetz die Pflicht, bekannt gewordene Nebenwirkungen zu dokumentieren. Falls Sie eine Nebenwirkung zu melden haben, rufen Sie uns bitte unter der Tel.–Nr. 040-703845-300 an oder kontaktieren Sie uns per E-Mail. In dringenden Notfällen können Sie uns auch unter der Tel.-Nr. 040-703845-333 erreichen.</string>
    <string name="nwSlitHeader">Nebenwirkungen sublinguale Immuntherapie</string>
    <string name="nwSlitText">Seit ihrer Einführung Anfang der 1990er Jahre wurde die Sicherheit sublingualer Immuntherapie sowohl bei Erwachsenen als auch Kindern in mehreren Studien sowie durch jahrzehntelange klinische Erfahrungen evaluiert.\nMilde Reaktionen auf sublinguale Immuntherapie können auftreten, stellen aber normalerweise kein Hindernis für eine Fortsetzung der Behandlung dar. Die am häufigsten gemeldeten Arzneimittelnebenwirkungen sind örtliche Reaktionen und treten häufiger auf, wenn höhere Allergendosen verabreicht werden.\nWährend der ersten Behandlungswoche:\nBei der sublingualen Immuntherapie können Nebenwirkungen wie Juckreiz und Schwellungen in der Mundhöhle auftreten. Die Reaktionen treten normalerweise nach der ersten Behandlung und bei den meisten Patienten auch nach wiederholter Verabreichung auf, werden allerdings mit fortschreitender Behandlung immer seltener und sind weniger ausgeprägt (1). Im Fall bedeutender unerwünschter lokaler Reaktionen sollte eine symptomatische Medikation etwa mit Antihistaminika erwogen werden.\nSystemische Reaktionen wie Urtikaria (Nesselsucht) und Asthma - und in seltenen Fällen auch schwere systemische Reaktionen wie Anaphylaxie - wurden ebenfalls beobachtet.\nDa sublinguale Immuntherapieprodukte in der Regel selbst verabreicht werden, sollten die Patienten immer klare schriftliche Anweisungen für den Umgang mit Nebenwirkungen erhalten und darauf hingewiesen werden, ihr Medikament an einem sicheren Ort und für Kinder unzugänglich aufzubewahren.</string>
    <string name="nwBtn">Zum Formular</string>
    <string name="nwScitHeader">Nebenwirkungen subkutane Immuntherapie</string>
    <string name="nwScitText">Laut den ARIA-Richtlinien (ARIA = Allergic Rhinitis and its Impact on Asthma) ist die subkutane Immuntherapie mit einem Risiko systemischer unerwünschter Arzneimittelreaktionen verbunden. Selbst bei Verabreichung standardmäßiger therapeutischer Dosen kann die subkutane Immuntherapie gelegentlich zu systemischen unerwünschten Arzneimittelreaktionen führen. Hierbei ist das Risiko bei Asthmapatienten etwas höher als bei Rhinitispatienten.\nDie Reaktionen werden nach dem Zeitpunkt des Einsetzens kategorisiert und reichen von Sofortreaktionen bis hin zu solchen Reaktionen, die über 30 Minuten nach der Verabreichung auftreten.\nKategorien systemischer Reaktionen\n1. Keine Symptome oder nur Symptome ohne Bezug zur Immuntherapie\n2. Leichte Reaktion, wie lokalisierte Urtikaria (Quaddeln), Rhinitis oder leichtes Asthma\n3. Mäßige Reaktion, die 15 Minuten oder später nach Verabreichung einsetzt und generalisierte Urtikaria und/oder mäßiges Asthma umfasst\n4. Schwere, aber nicht lebensbedrohliche Reaktion, die generalisierte Urtikaria, Angioödem oder schweres Asthma umfasst\n5. Anaphylaktischer Schock</string>
    <string name="nwfHeader">Bericht über unerwünschte Arzneimittelwirkung</string>
    <string name="nwfPatHeader">Informationen Patient</string>
    <string name="nwfPatDesc">Geburtsdatum</string>
    <string name="nwfGeschlechtM">M</string>
    <string name="nwfGeschlechtW">W</string>
    <string name="nwfGroeße">Größe in cm</string>
    <string name="nwfGewicht">Gewicht in kg</string>
    <string name="nwfProdHeader">Informationen Präparat</string>
    <string name="nwfProdName">Name des Präparats</string>
    <string name="nwfProdCNumber">Chargen-Nr.</string>
    <string name="nwfReactHeader">Informationen Reaktion</string>
    <string name="nwfReactDesc">Beschreibung der Reaktion</string>
    <string name="nwfReactFoto">Foto</string>
    <string name="nwfMeldenderHeader">Informationen Meldender</string>
    <string name="nwfMeldenderNr">Telefonnummer</string>
    <string name="nwfSend">Abschicken</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>