<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.kai.appalk.NebenwirkungenFormular">

        <android.support.constraint.Guideline
            android:id="@+id/guideline35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/nwfHeader"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline36"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline35"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/nwfPatHeader"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline35"
            app:layout_constraintTop_toBottomOf="@+id/textView19" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/nwfProdHeader"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline35"
            app:layout_constraintTop_toBottomOf="@+id/editText6" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/nwfReactHeader"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline35"
            app:layout_constraintTop_toBottomOf="@+id/editText8" />

        <EditText
            android:id="@+id/nwfGebDat"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:ems="10"
            android:focusable="true"
            android:hint="@string/nwfPatDesc"
            android:inputType="date"
            app:layout_constraintStart_toStartOf="@+id/guideline35"
            app:layout_constraintTop_toBottomOf="@+id/textView20" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toEndOf="@+id/nwfGebDat"
            app:layout_constraintTop_toBottomOf="@+id/textView20">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:text="@string/nwfGeschlechtM"
                app:layout_constraintStart_toEndOf="@+id/nwfGebDat"
                app:layout_constraintTop_toBottomOf="@+id/textView20" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:text="@string/nwfGeschlechtW"
                app:layout_constraintStart_toEndOf="@+id/radioButton"
                app:layout_constraintTop_toBottomOf="@+id/textView20" />
        </RadioGroup>

        <EditText
            android:id="@+id/editText6"
            android:layout_width="131dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/nwfGroeße"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="@+id/guideline35"
            app:layout_constraintTop_toBottomOf="@+id/nwfGebDat" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline36"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.92" />

        <EditText
            android:id="@+id/editText7"
            android:layout_width="131dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/nwfGewicht"
            android:inputType="number"
            app:layout_constraintStart_toEndOf="@+id/editText6"
            app:layout_constraintTop_toBottomOf="@+id/nwfGebDat" />

        <EditText
            android:id="@+id/editText8"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/nwfProdName"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="@+id/guideline35"
            app:layout_constraintTop_toBottomOf="@+id/textView21" />

        <EditText
            android:id="@+id/editText9"
            android:layout_width="127dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/nwfProdCNumber"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toStartOf="@+id/guideline36"
            app:layout_constraintStart_toEndOf="@+id/editText8"
            app:layout_constraintTop_toBottomOf="@+id/textView21" />

        <EditText
            android:id="@+id/editText10"
            android:layout_width="223dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/nwfReactDesc"
            android:inputType="textMultiLine"
            app:layout_constraintStart_toStartOf="@+id/guideline35"
            app:layout_constraintTop_toBottomOf="@+id/textView22" />

        <Button
            android:id="@+id/button7"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="61dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/nwfReactFoto"
            app:layout_constraintEnd_toStartOf="@+id/guideline36"
            app:layout_constraintStart_toEndOf="@+id/editText10"
            app:layout_constraintTop_toBottomOf="@+id/textView22" />

        <Button
            android:id="@+id/button9"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:onClick="nwfSendMail"
            android:text="@string/nwfSend"
            app:layout_constraintEnd_toStartOf="@+id/guideline36"
            app:layout_constraintTop_toBottomOf="@+id/listView" />

        <ImageView
            android:id="@+id/listView"
            android:layout_width="86dp"
            android:layout_height="53dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline36"
            app:layout_constraintTop_toBottomOf="@+id/button7" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>